--- a/docs/manual/cites.bib
+++ b/docs/manual/cites.bib
@@ -94,3 +94,14 @@
   number     = {6},
   pages      = {65-66}
 }
+
+@article{celek:2019,
+  author     = {Sarah Calek},
+  title      = {What\'s in a game translator},
+  shorthand  = {Game},
+  year       = {2019},
+  journal    = {MultiLingual},
+  volume     = {30},
+  number     = {3},
+  pages      = {20-22}
+}
