--- a/docs/manual/index.qmd
+++ b/docs/manual/index.qmd
@@ -22,6 +22,7 @@ various i18n and l10n issues. Additionally, the GUI version provides pseudo-tran
 - C code
 - C++ code ('98 and modern C++)
 - Windows resource files (\*.rc)
+- macOS application Info.plist files
 
 Static analysis and pseudo-translation are available for:
 
@@ -70,6 +71,7 @@ The command line and GUI versions provide the following checks:
 - Font issues in Windows resource files [@rc-string-tables]:
   - Dialogs not using "MS Shell Dlg" or "MS Shell Dlg 2."
   - Dialogs with non-standard font sizes.
+- Info.plist files not including any `CFBundleLocalizations` keys.
 
 Code formatting and other issues can also be checked for, such as:
 
