Manual: formatting fixes, add citation

--- a/docs/manual/cites.bib
+++ b/docs/manual/cites.bib
@@ -97,11 +97,22 @@
 
 @article{celek:2019,
   author     = {Sarah Calek},
-  title      = {What\'s in a game translator},
+  title      = {What's in a game translator},
   shorthand  = {Game},
   year       = {2019},
   journal    = {MultiLingual},
   volume     = {30},
   number     = {3},
   pages      = {20-22}
+}
+
+@article{perezsaenz,
+  author     = {Cristina P\'erez and Leticia S\'aenz},
+  title      = {Gender-inclusive languages in games and its localization challenges},
+  shorthand  = {Gender-inclusive},
+  year       = {2019},
+  journal    = {MultiLingual},
+  volume     = {30},
+  number     = {3},
+  pages      = {32-35}
 }
