Update license in manual to Eclipse compatible CC-BY-SA

--- a/docs/manual/index.qmd
+++ b/docs/manual/index.qmd
@@ -4,9 +4,9 @@
 
 This book is the guide to using *Quneiform*, an internationalization & localization analysis system for C++ code and translation resources.
 
-![](images/CC_BY-NC-ND.png)
+![](images/by-sa.png)
 
-This book is licensed under the [Creative Commons Attribution-NonCommercial-NoDerivs 4.0 International License](https://creativecommons.org/licenses/by-nc-nd/4.0/).
+This book is licensed under the [Creative Commons Attribution-Sharealike 4.0 International License](https://creativecommons.org/licenses/by-sa/4.0/).
 :::
 
 # Overview
