Fix casing in build instructions

--- a/docs/manual/building.qmd
+++ b/docs/manual/building.qmd
@@ -48,7 +48,7 @@ cmake --build . --target install --config Release
 
 # go back into the project folder and build the GUI version
 cd ..
-cd Quneiform/gui
+cd quneiform/gui
 cmake . -DCMAKE_BUILD_TYPE=Release
 cmake --build . --target all --config Release
 ```
