Update icon for license in manual

--- a/docs/manual/latex/creative-commons.tex
+++ b/docs/manual/latex/creative-commons.tex
@@ -30,7 +30,7 @@
     \vspace{0.4cm}
 
 % Write the Creative Commons Icons
-    \ccbyncsa
+    \ccbysa
 
 % Stop centering everything
   \end{center}
