--- a/docs/manual/index.qmd
+++ b/docs/manual/index.qmd
@@ -58,7 +58,7 @@ The command line and GUI versions provide the following checks:
   Encoding extended ASCII characters is recommended for
   best portability between compilers.
 - Strings with malformed syntax (e.g., malformed HTML tags).
-- Use of deprecated text macros (e.g., `wxT()` in wxWidgets, `_T()` in Win32).
+- Use of deprecated text macros (e.g., `wxT()` in wxWidgets\index{wxWidgets!deprecated macros}, `_T()` in Win32).
 - Use of deprecated string functions (e.g., `_tcsncpy` in Win32).
 - Files that contain extended ASCII characters, but are not UTF-8 encoded.<br />
   (It is recommended that files be UTF-8 encoded for portability between compilers.)
