--- a/docs/manual/latex/preamble.tex
+++ b/docs/manual/latex/preamble.tex
@@ -27,8 +27,6 @@
 \usepackage{bbding}
 \usepackage{amsthm}
 \usepackage{xeCJK}
-\setCJKmainfont{MS Gothic} % for \rmfamily
-\setCJKsansfont{MS Gothic} % for \sffamily
 \usepackage[all]{nowidow}
 \usepackage{menukeys}
 \usepackage{amsmath}
@@ -59,6 +57,19 @@
 \usepackage{overpic}
 \usepackage{tikz}
 \usepackage{ragged2e}
+
+% words to not hyphenate
+\hyphenation{Readability}
+\hyphenation{Studio}
+\hyphenation{LibreOffice}
+\hyphenation{Microsoft}
+\hyphenation{ExportAll}
+\hyphenation{FORTRAN}
+\hyphenation{COBOL}
+\hyphenation{FORCAST}
+\hyphenation{histograms}
+\hyphenation{otherwise}
+
 % MLA requirements
 \usepackage[letterpaper, margin=1in]{geometry}
 
