--- a/docs/manual/latex/titlepage.tex
+++ b/docs/manual/latex/titlepage.tex
@@ -1,4 +1,6 @@
-\pagestyle{empty}
+\thispagestyle{empty}
+
+\newgeometry{top=.5cm, bottom=.5cm, left=.5cm, right=.5cm}
 
 \begin{center}
 
@@ -6,18 +8,26 @@
     \vspace*{\fill}
 
     \Huge \textsc{\textbf{\thetitle}} \par
-    \LARGE \textit{\thesubtitle} \par
+    \LARGE \textcolor{gray}{\textit{\thesubtitle}} \par
 
     \vspace{1cm}
 
     \large \theauthor
 
-    \vspace*{\fill}
-
 \end{center}
+
+\vspace*{\fill}
+
+    \begin{flushright}
+      \thepublisherlogo \par
+      \normalsize \thepublishercities
+    \end{flushright}
+
+\titlepagedecoration
 
 % reset font
     \normalfont
     \normalsize
 
 \clearpage
+\restoregeometry
