--- a/docs/manual/latex/default.tex
+++ b/docs/manual/latex/default.tex
@@ -36,6 +36,80 @@ $for(classoption)$
   $classoption$$sep$,
 $endfor$
 ]{$documentclass$}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+% Settings for Legrand Orange Book document class
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+$if(theme-color)$
+  \definecolor{ocre}{RGB}{$theme-color$}
+$else$
+  \definecolor{ocre}{RGB}{243, 102, 25} % Define the color used for highlighting throughout the book
+$endif$
+
+$if(chapter-image)$
+  \chapterimage{$chapter-image$} % Chapter heading image
+$endif$
+\chapterspaceabove{6.5cm} % Default whitespace from the top of the page to the chapter title on chapter pages
+\chapterspacebelow{6.75cm} % Default amount of vertical whitespace from the top margin to the start of the text on chapter pages
+
+% title page
+
+\colorlet{titlepagecolor}{ocre}
+
+% The following code is borrowed from: https://tex.stackexchange.com/a/86310/10898
+
+\newcommand\titlepagedecoration{%
+\begin{tikzpicture}[remember picture,overlay,shorten >= -10pt]
+
+\coordinate (aux1) at ([yshift=-15pt]current page.north east);
+\coordinate (aux2) at ([yshift=-410pt]current page.north east);
+\coordinate (aux3) at ([xshift=-4.5cm]current page.north east);
+\coordinate (aux4) at ([yshift=-150pt]current page.north east);
+
+\begin{scope}[titlepagecolor!40,line width=12pt,rounded corners=12pt]
+\draw
+  (aux1) -- coordinate (a)
+  ++(225:5) --
+  ++(-45:5.1) coordinate (b);
+\draw[shorten <= -10pt]
+  (aux3) --
+  (a) --
+  (aux1);
+\draw[opacity=0.6,titlepagecolor,shorten <= -10pt]
+  (b) --
+  ++(225:2.2) --
+  ++(-45:2.2);
+\end{scope}
+\draw[titlepagecolor,line width=8pt,rounded corners=8pt,shorten <= -10pt]
+  (aux4) --
+  ++(225:0.8) --
+  ++(-45:0.8);
+\begin{scope}[titlepagecolor!70,line width=6pt,rounded corners=8pt]
+\draw[shorten <= -10pt]
+  (aux2) --
+  ++(225:3) coordinate[pos=0.45] (c) --
+  ++(-45:3.1);
+\draw
+  (aux2) --
+  (c) --
+  ++(135:2.5) --
+  ++(45:2.5) --
+  ++(-45:2.5) coordinate[pos=0.3] (d);   
+\draw 
+  (d) -- +(45:1);
+\end{scope}
+\end{tikzpicture}%
+}
+
+% add the title page decoration
+\makeatletter
+\def\@endpart{\titlepagedecoration\vfil\newpage
+\if@tempswa\twocolumn\fi}
+\makeatother
+
 $if(beamer)$
 $if(background-image)$
 \usebackgroundtemplate{%
@@ -468,6 +542,16 @@ $endif$
 \def\thetitle{$for(title)$$title$$endfor$}
 \def\thesubtitle{$for(subtitle)$$subtitle$$endfor$}
 \def\authorbio{$for(authorbio)$$authorbio$$endfor$}
+\def\thepublisher{$for(publisher)$$publisher$$endfor$}
+\def\thepublishercities{$for(publisher-cities)$\hspace{1cm}$publisher-cities$$endfor$}
+\def\trademark{$for(trademark)$\textit{$trademark$}\textsuperscript{\tiny\textregistered}$endfor$}
+
+% Either shows a logo for the publisher or their name in bold
+$if(publisher-logo)$
+\def\thepublisherlogo{\includegraphics[width=5cm]{$publisher-logo$}}
+$else$
+\def\thepublisherlogo{\large \textbf{\thepublisher}}
+$endif$
 
 % Optional watermark (e.g., "DRAFT" stamped across the pages)
 $if(watermark)$
@@ -493,6 +577,8 @@ $endif$
 
 $if(pdf-cover-color)$
   \definecolor{cover-color}{RGB}{$pdf-cover-color$}
+$elseif(theme-color)$
+  \definecolor{cover-color}{RGB}{$theme-color$}
 $else$
   \definecolor{cover-color}{RGB}{0, 255, 0}
 $endif$
@@ -514,7 +600,7 @@ $endif$
 \coordinate (aux2) at ([yshift=-410pt]current page.north east);
 \coordinate (aux3) at ([xshift=-4.5cm]current page.north east);
 \coordinate (aux4) at ([yshift=-150pt]current page.north east);
-
+    
 \begin{scope}[titlepagecolor!40,line width=12pt,rounded corners=12pt]
 \draw
   (aux1) -- coordinate (a)
@@ -547,24 +633,24 @@ $endif$
 \draw 
   (d) -- +(45:1);
 \end{scope}
-}
+  }
 
 % title section (at the top, overlaying image)
 \tikz[overlay, remember picture] \node at (current page.north west)[anchor=north west]
-{
+  {
 \begin{tcolorbox}[enhanced jigsaw, sharp corners, spread outwards, grow sidewards by=5mm, enlarge top by=-2mm,
                 boxsep=0.5cm, valign=top, text height=3.75cm, boxrule=0mm,
                 bicolor, colbacklower=white-smoke, halign lower=center, valign lower=center,
-                colback=cover-color, colframe=cover-color, opacityback=0.95, opacityframe=0.95]
-    {\fontsize{42pt}{46pt} \usefont{T1}{PlyfrDisplay-OsF}{eb}{n} \color{cover-font-color} $title$}
+                    colback=cover-color, colframe=cover-color, opacityback=0.95, opacityframe=0.95]
+       {\fontsize{42pt}{46pt} \usefont{T1}{PlyfrDisplay-OsF}{eb}{n} \color{cover-font-color} $title$}
 
-    \vspace{.5cm}
-    {\fontsize{30pt}{34pt} \usefont{T1}{PlyfrDisplay-OsF}{eb}{it} \color{cover-font-color} $subtitle$\vphantom{Qy}}
+       \vspace{.5cm}
+       {\fontsize{30pt}{34pt} \usefont{T1}{PlyfrDisplay-OsF}{eb}{it} \color{cover-font-color} $subtitle$\vphantom{Qy}}
 
-    \vspace{0.1cm}
-    \tcblower
+       \vspace{0.1cm}
+       \tcblower
     {\large \color{black} \adforn{45}\quad {\usefont{T1}{qcs}{b}{sc} \capitalizetitle{$description$}} \quad\adforn{46}}
-\end{tcolorbox}
+  \end{tcolorbox}
 };
 
 \begin{tikzpicture}[overlay, remember picture]
@@ -573,22 +659,23 @@ $endif$
 
 % author line at the bottom
 \tikz[overlay, remember picture] \node at (current page.south west)[anchor=south west]
-{
-\begin{tcolorbox}[enhanced jigsaw, sharp corners, box align=bottom, halign=right, boxsep=0.5cm,
+  {
+  \begin{tcolorbox}[enhanced jigsaw, sharp corners, box align=bottom, halign=right, boxsep=0.5cm,
                 spread outwards, grow sidewards by=5mm,
                 colback=white, colframe=white, colframe=white, opacityback=1, opacityframe=1, boxrule=0mm]
-    {\fontsize{18pt}{22pt} \color{cover-color} {\usefont{T1}{qcs}{b}{sc} \capitalizetitle{$author$}} }
-\end{tcolorbox}
+    {\fontsize{18pt}{22pt} \color{author-color} {\usefont{T1}{qcs}{b}{sc} \capitalizetitle{$author$}} }
+  \end{tcolorbox}
 };
 
 $if(pdf-logo)$
 \begin{tikzpicture}[overlay, remember picture]
-    \node (centerimage) at (current page.south west)[anchor=south west] {\includegraphics[width=3cm]{$pdf-logo$}};
+    \node (centerimage) at (current page.south west)[anchor=south west]
+    {\includegraphics[width=$if(pdf-logo-size)$$pdf-logo-size$$else$3cm$endif$]{$pdf-logo$}};
 \end{tikzpicture}
 $endif$
 
 \clearpage{\thispagestyle{empty}\cleardoublepage}
-\restoregeometry
+\restoregeometry 
 $endif$
 
 \frontmatter
