--- a/docs/manual/gui/options.qmd
+++ b/docs/manual/gui/options.qmd
@@ -205,15 +205,20 @@ Questionable commands such as "*% s*" (space is only meant for numeric formattin
 **Check for inconsistent keyboard accelerators**: select this to check for mismatching keyboard accelerators between source and translation strings.
 This is performed by checking that both strings contain one '&' followed by an alphanumeric character.
 
-**Check for inconsistent casing, separators, trailing punctuation, spaces, or newlines**: select this to check for the following between source and translation strings:
+**Check for inconsistent punctuation, untranslatable names, etc**: select this to check for the following between source and translation strings:
 
-- Mismatching trailing punctuation, spaces, or newlines,
+- Mismatching trailing punctuation, spaces, or newlines.
 - The source string starting with an uppercase letter and the translation starting with a lowercase letter.
 - Mismatching number of "\\t" and "|" symbols.
+- Untranslatable names appearing more times in the source than in the translation.
 
 In regards to punctuation, terminating characters such as periods, exclamation points, question marks, and colons are reviewed.
 For these, warnings will only be emitted if the source string has a terminating mark and the translation does not have either a terminating mark or closing parenthesis.
 All types of terminating marks are treated interchangeably, as not all languages commonly use question and exclamation marks as much as English.
+
+**Untranslatable words and phrases**: enter any phrases that should not be translated here.
+This can include the names of companies, products, or people.
+If any of these items appear less times in the translation compared to the source string, a warning will be raised.
 
 **Check for inconsistent numbers**: select this to check for mismatching numbers between the source and target strings.
 
