Add support for Quarto files Currently checks to see if each sentence is on its own line.

--- a/docs/manual/command-line/checks.qmd
+++ b/docs/manual/command-line/checks.qmd
@@ -5,6 +5,7 @@ Perform all internationalization checks (the default).
 - `suspectL10NString`
 
 Check for translatable strings that should not be (e.g., numbers, keywords, `printf()` commands).
+This will also check for bad formatting in *Quarto* files that make text extraction difficult.
 
 - `suspectL10NUsage`
 
