--- a/docs/manual/index.qmd
+++ b/docs/manual/index.qmd
@@ -23,6 +23,7 @@ various i18n and l10n issues. Additionally, the GUI version provides pseudo-tran
 - C++ code ('98 and modern C++)
 - Windows resource files (\*.rc)
 - macOS application Info.plist files
+- *Quarto* documentation files
 
 Static analysis and pseudo-translation are available for:
 
@@ -79,6 +80,7 @@ The command line and GUI versions provide the following checks:
   - Dialogs not using "MS Shell Dlg" or "MS Shell Dlg 2."
   - Dialogs with non-standard font sizes.
 - Info.plist files not including any `CFBundleLocalizations` keys.
+- *Quarto* files having multiple sentences on the same line.
 
 Code formatting and other issues can also be checked for, such as:
 
